   * first turn of a game is saved again (fixes bug #7909 and bug #8117)
   * reduce CPU usage by removing calls to SDL_GetTicks for idle animations
   * changed network thread management to be more scalable, both with an upper
   and lower number of threads
   * enabled python as default, to disable it use --disable-python
   * various code cleanups

Version 1.2:
 * campaigns:
   * Two Brothers:
     * updated portraits for Arne nad Bjarn
   * Under the Burning Suns:
     * changed some maps to fix glitches
     * fixed some image paths
     * new naga hunter portrait from Ranger M
     * uses the new lava transitions
 * graphics:
   * terrain:
     * new ice transition
     * modified swamp color
   * units:
     * new team-colored base-frames: grand marshal, human assassin, sergeant
     * halos for elvish shaman line attacks
     * new lightning bolt for Delfador
     * new fireball attack
     * new attack icons for wose crush and troll hammer
   * misc:
     * new icons for preferences
     * updated hex grid
 * language and i18n:
   * new man pages: Russian
   * updated translations: Catalan, Dutch, French, German, Greek, Italian,
     Norwegian, Russian, Slovenian
   * updated DejaVuSans font to 2.13
 * multiplayer maps:
   * revised maps: Blitz, Charge, Den of Onis, Hornshark Island, 4p Morituri,
     Meteor Lake, Lagoon
 * multiplayer
   * fixed some automove bugs (bug #7494 and bug #7251)
   * fixed passing controller in mp campaign (bug #7936)
   * added help strings so that long map names can be read from the MP Create
     screen
   * used small bold text for "Load Game..." item
   * support added for allow_new_game=no (for MP Campaigns)
 * misc:
   * fixed the AI usage of attack_weight (bug #7953)
   * the displayed terrain now has a space before the opening bracket
   * fixed a crash when image is missing (patch #647, thanks to pauli)
   * fixed a crash when attacking a sea serpent (bug #8075) (patch #648)

Version 1.1.14:
 * campaigns: