@@ -1,22 +1,9 @@
 EXTRA_DIST = wesnoth.desktop wesnoth-icon.png
 
-if GNOME1
-gnome1desktopdir = @GNOME1_DESKTOP@
-dist_gnome1desktop_DATA = wesnoth.desktop
-gnome1icondir = @GNOME_ICON@
-gnome1icon_DATA = wesnoth-icon.png
+if GAME_DESKTOP_ENTRY
+appentrydir = @APP_ENTRY@
+dist_appentry_DATA = wesnoth.desktop
+appicondir = @APP_ICON@
+appicon_DATA = wesnoth-icon.png
 endif
 
-if GNOME2
-gnome2desktopdir = @GNOME2_DESKTOP@
-dist_gnome2desktop_DATA = wesnoth.desktop 
-gnome2icondir = @GNOME_ICON@
-gnome2icon_DATA = wesnoth-icon.png
-endif
-
-if KDE
-kdedesktopdir = @KDE_DESKTOP@
-dist_kdedesktop_DATA = wesnoth.desktop
-kdeicondir = @KDE_ICON@
-kdeicon_DATA = wesnoth-icon.png
-endif
