@@ -238,6 +238,7 @@ Version 1.3-svn:
    and lower number of threads
    * enabled python as default, to disable it use --disable-python
    * various code cleanups
+   * replaced KDE/Gnome desktop support with generic freedesktop standard
 
 Version 1.2:
  * campaigns:
